@@ -1,3 +1,4 @@
+S3method("-",popgraph)
 export(as.popgraph)
 export(centroid_distance)
 export(centroid_variance)
@@ -20,4 +21,5 @@ export(to_matrix)
 export(to_pgraph)
 export(write.popgraph)
 import(ggplot2)
+import(igraph)
 import(sp)
