@@ -8,16 +8,21 @@
 #' @author Rodney J. Dyer <rjdyer@@vcu.edu>
 as.popgraph <- function(graph) {
   ret <- NULL
-  if( is(graph,"matrix")) {
-    ret <- graph.adjacency( graph, mode="undirected",weighted=TRUE) 
+  if( is(graph,"matrix")) {  
+    
+    ret <- igraph::graph.adjacency( graph, mode="undirected",weighted=TRUE) 
     if( is.null(colnames( graph )) )
       V(ret)$name <- as.character(paste("node",seq(1,ncol(graph)), sep="-"))
     else
       V(ret)$name <- colnames( graph )
   }
   
-  if( is(graph,"igraph"))
+  if( is(graph,"igraph")) {
     ret <- graph
+    if( length(igraph::V(ret)$name) == 0)
+      igraph::V(ret)$name <- paste( "Node",seq(1,length(V(ret))),sep="-")
+  }
+    
   
   if( is.null(ret) )
     stop("Must pass either an igraph or matrix item to this function.")
